fix(button): remove double border in disabled material button

--- a/src/components/button/themes/button/shared/button.material.scss
+++ b/src/components/button/themes/button/shared/button.material.scss
@@ -147,7 +147,6 @@ $outlined-theme: $material-outlined;
 :host([disabled][variant='outlined']) [part='base'],
 :host(:disabled[variant='outlined']) [part='base'] {
     box-shadow: inset 0 0 0 rem(1px) var-get($outlined-theme, 'disabled-border-color');
-    border: rem(1px) solid var-get($outlined-theme, 'disabled-border-color');
 }
 
 :host([disabled][variant='contained']) [part='base'],
